With row sorting and filtering, checkout and menu table updates